# edgeware-node

./: .gitmodules  rust-toolchain
client/evm-tracing/: Cargo.toml
client/rpc-core/debug/: Cargo.toml
client/rpc-core/txpool/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/trace/: Cargo.toml
client/rpc/txpool/: Cargo.toml
node/cli/: Cargo.toml
node/cli-opt/: Cargo.toml
node/cli/src/: chain_spec.rs  cli.rs  service.rs
node/evm_tracer/: Cargo.toml
node/executor/: Cargo.toml
node/primitives/: Cargo.toml
node/primitives/src/: currency.rs  lib.rs
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs  tracing.rs
node/runtime/: Cargo.toml
node/runtime-interface/: Cargo.toml
node/runtime/src/: impl_self_contained_call.rs  impls.rs  lib.rs
orml/_.git/: config  index  packed-refs
orml/_.git/logs/refs/heads/: master
orml/_.git/objects/pack/: pack-82672ff4b88117ba7c0ae477a66df9bfa5ca28cd.idx  pack-82672ff4b88117ba7c0ae477a66df9bfa5ca28cd.pack
orml/_.git/refs/heads/: master
orml/auction/: Cargo.toml
orml/authority/: Cargo.toml
orml/bencher/: Cargo.toml
orml/benchmarking/: Cargo.toml
orml/build-script-utils/: Cargo.toml
orml/currencies/: Cargo.toml
orml/gradually-update/: Cargo.toml
orml/nft/: Cargo.toml
orml/oracle/: Cargo.toml
orml/oracle/rpc/: Cargo.toml
orml/oracle/rpc/runtime-api/: Cargo.toml
orml/rewards/: Cargo.toml
orml/tokens/: Cargo.toml
orml/traits/: Cargo.toml
orml/unknown-tokens/: Cargo.toml
orml/utilities/: Cargo.toml
orml/vesting/: Cargo.toml
orml/weight-meter/: Cargo.toml
orml/xcm/: Cargo.toml
orml/xcm-support/: Cargo.toml
orml/xtokens/: Cargo.toml
pallets/edge-treasury-reward/: Cargo.toml
pallets/edge-treasury-reward/src/: lib.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/txpool/: Cargo.toml
scripts/: test.sh
