[package]
name = "edgeware-executor"
version = "3.4.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Edgeware implementation using a substrate node."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
trie-root = "0.16.0"
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-io = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-state-machine = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-executor = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-core = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-trie = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
frame-benchmarking = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }

edgeware-primitives = { version = "3.4.0", path = "../primitives" }
edgeware-runtime = { version = "3.4.0", path = "../runtime" }
edgeware-runtime-interface = { version = "3.4.0", path = "../runtime-interface" }

[dev-dependencies]
sp-runtime = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
frame-support = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-balances = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-transaction-payment = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-session = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
frame-system = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-timestamp = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-treasury = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-grandpa = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-indices = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
wabt = "0.10.0"
criterion = "0.3.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
