[package]
name = "edgeware-rpc"
version = "3.4.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Edgeware rpc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
pallet-contracts-rpc = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-transaction-payment-rpc = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-client-api = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-consensus-aura = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-consensus-epochs = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-finality-grandpa = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-finality-grandpa-rpc = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-keystore = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-network = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-rpc-api = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-rpc = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-service = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-api = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-block-builder = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-blockchain = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-consensus = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-consensus-aura = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-core = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-offchain = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-runtime = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-storage = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-session = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-transaction-pool = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-transaction-pool = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
substrate-frame-rpc-system = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
tokio = { version = "1.12.0", features = ["macros", "sync"] }

pallet-ethereum = { git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218", features = ["runtime-benchmarks"] }
fc-rpc = { default-features = false, git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218" }
fp-rpc = { default-features = false, git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218" }
fc-rpc-core = { default-features = false, git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218" }
fc-db = { default-features = false, git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218" }
fc-mapping-sync = { default-features = false, git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218" }

edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
edgeware-executor = { path = "../executor" }
edgeware-cli-opt = { path = "../cli-opt" }
edgeware-rpc-txpool = { path = "../../client/rpc/txpool" }
edgeware-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
edgeware-rpc-debug = { path = "../../client/rpc/debug" }
edgeware-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
edgeware-rpc-trace = { path = "../../client/rpc/trace" }

[features]
std = []