[package]
name = "edgeware-rpc-debug"
version = '0.1.0'
authors = ['PureStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/PureStake/moonbeam/'

[dependencies]
tokio = { version = "1.12.0", features = ["time", "sync"] }
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = "18.0.0"

ethereum = { version = "0.10.0", default-features = false, features = ["with-codec"] }
ethereum-types = "0.12.0"
sp-core = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-api = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-io = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-blockchain = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-client-api = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-block-builder = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-runtime = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sc-utils = { git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }

edgeware-rpc-core-debug = { path = "../../rpc-core/debug" }
edgeware-rpc-core-types = { path = "../../rpc-core/types" }
edgeware-client-evm-tracing = { path = "../../evm-tracing" }
edgeware-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }
fc-consensus = { git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218" }
fc-db = { git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218" }
fc-rpc = { git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218", features = ["rpc_binary_search_estimate"] }
fp-rpc = { git = "https://github.com/remzrn/frontier", branch = "remz-substrate-upgrade-20211218" }
